# diag

./: Makefile  README.md  go.diag_flow
backup/: Makefile_flow  Makefile_fugaku  Makefile_fugaku_ppmq  Makefile_ito  Makefile_jfrs  Makefile_mac  Makefile_p-srv  Makefile_ps_sx  Makefile_ubuntu  go.diag_flow  go.diag_fugaku  go.diag_fugaku_ppmq  go.diag_ito  go.diag_jfrs  go.diag_mac  go.diag_p-srv  go.diag_ps_sx  go.diag_ubuntu
backup/old/: Makefile_helios  Makefile_k_ppb  Makefile_nu  Makefile_oakleaf  Makefile_ps  Makefile_ps_fx  Makefile_ps_rx  go.diag_helios  go.diag_k_ppb  go.diag_nu  go.diag_oakleaf  go.diag_ps_fx  go.diag_ps_rx  test_endian.py
plot_gn/: plot_fkinkxky.gn  plot_fkinvm.gn  plot_fkinzv.gn  plot_linfreqinkxky.gn  plot_linfreqintime.gn  plot_mominkxky.gn  plot_mominrz.gn  plot_momintky.gn  plot_momintky_parity.gn  plot_mominxy.gn  plot_mominxy_parity.gn  plot_mominxz.gn  plot_mominz.gn  plot_mominz_freq.gn  plot_mominz_parity.gn  plot_mominz_parity_freq.gn
plot_ipynb/: nbconv.sh  plot_fluiddetailtransinkxky.ipynb  plot_fluiddetailtransinkxky.py  plot_fluidtotaltransinkxky.ipynb  plot_fluidtotaltransinkxky.py  plot_fluxinvm.ipynb  plot_mominkxky.ipynb  plot_mominkxky.py  plot_mominxy.ipynb  plot_mominxy.py  plot_mominz.ipynb  plot_mominz.py  plot_phiinkxky.ipynb  plot_phiinkxky.py  plot_phiinrz.ipynb  plot_phiinrz.py  plot_phiinxy.ipynb  plot_phiinxy.py  plot_phiinz.ipynb  plot_phiinz.py  plot_triinkxky.ipynb  plot_triinkxky.py  plot_trninkxky.ipynb  plot_trninkxky.py  read_f90.ipynb  read_f90.py
src/: diag_chgres_cnt.f90  diag_chgres_util.f90  diag_clock.f90  diag_fft.f90  diag_functions.f90  diag_geom.f90  diag_header.f90  diag_intgrl.f90  diag_main.f90  diag_parity.f90  diag_rb.f90  diag_rb_fortran.f90  diag_rb_netcdf.f90  gkvp_igs.f90  gkvp_vmecbzx.f90  out_bicoherence.f90  out_correlate.f90  out_ffinkxky.f90  out_ffinvm.f90  out_ffinzv.f90  out_ffinzvm_vtk.f90  out_fluiddetailtrans.f90  out_fluidsubsptrans.f90  out_fluidtotaltrans.f90  out_linfreq.f90  out_mominavs.f90  out_mominfreq.f90  out_mominkxky.f90  out_mominrz.f90  out_momintky.f90  out_mominvtk.f90  out_mominxmf.f90  out_mominxy.f90  out_mominxz.f90  out_mominz.f90  out_netcdf.f90  out_realsp.f90  out_textfile.f90  out_triinkxky.f90  out_trninkxky.f90  (+2 more)
src/backup/: diag_main.f90  diag_main_chgres_fort.f90  diag_main_chgres_netcdf.f90
src/templates/: template_diag_main.f90  template_out_mominkxky.f90  template_out_mominxy.f90
