#!/usr/bin/gnuplot

  loop_sta = 0
  loop_end = 30
  loop_skp = 1
  dtout_fxv = 1.0

  mx = 0
  my = 3
  rankz = 4
  is = 0

  set pm3d map
  set xlabel 'Parallel velocity v_{||} / v_{ts}'
  set ylabel 'Perpendicular velocity v_{/Symbol \136} / v_{ts}'


do for [loop=loop_sta:loop_end:loop_skp]{
  input = sprintf('./data/fkinvm_mx%04dmy%04drankz%04ds%d_t%08d.dat', mx, my, rankz, is, loop)
  set title 't v_{ref}/L_{ref} = '.sprintf('%7.2f', dtout_fxv*loop)
  splot input u 1:3:4 ti 'Re[f_k]'
  pause 0.2
}
pause -1


do for [loop=loop_sta:loop_end:loop_skp]{
  input = sprintf('./data/fkinvm_mx%04dmy%04drankz%04ds%d_t%08d.dat', mx, my, rankz, is, loop)
  set title 't v_{ref}/L_{ref} = '.sprintf('%7.2f', dtout_fxv*loop)
  splot input u 1:3:5 ti 'Im[f_k]'
  pause 0.2
}
pause -1
