#!/usr/bin/gnuplot

  loop_sta = 0
  loop_end = 60
  loop_skp = 1
  dtout_ptn = 0.1


  set pm3d map
  set palette defined ( 0 '#000090',1 '#000fff',2 '#0090ff',3 '#0fffee',4 '#90ff70',5 '#ffee00',6 '#ff7000',7 '#ee0000',8 '#7f0000')
  set size ratio -1
  set autoscale fix

  set xlabel "Major radius R/R_0"
  set ylabel "Height Z/R_0"


### Electrostatc potential phi ###
do for [loop=loop_sta:loop_end:loop_skp]{
  input = sprintf('./data/phiinrz_t%08d.dat', loop)
  set title 't v_{ref}/L_{ref} = '.sprintf('%7.2f', dtout_ptn*loop)
  splot input u 1:2:3 ti ''#'{/Symbol f}'
  pause 0.2
}
pause -1
