#!/usr/bin/gnuplot

  lsta = 0
  lend = 7000
  lskp = 100
  dt = 0.01

  set pm3d map


### Electrostatc potential phi ###
do for [loop=lsta:lend:lskp]{
  input = sprintf('./data/phiinxz_my0001_t%08d.dat', loop)
  set title 't v_{ti}/R = '.sprintf('%7.2f', dt*loop)
  splot input u 1:2:(sqrt($3**2+$4**2)) ti '|{/Symbol f}_k|'
  #splot input u 1:2:3 ti 'Re[{/Symbol f}_k]'
  #splot input u 1:2:4 ti 'Im[{/Symbol f}_k]'
  pause 0.2
}
pause -1


### Magnetic vector potential Al ###
do for [loop=lsta:lend:lskp]{
  input = sprintf('./data/Alinxz_my0001_t%08d.dat', loop)
  set title 't v_{ti}/R = '.sprintf('%7.2f', dt*loop)
  splot input u 1:2:(sqrt($3**2+$4**2)) ti '|A_{||k}|'
  #splot input u 1:2:3 ti 'Re[A_{||k}]'
  #splot input u 1:2:4 ti 'Im[A_{||k}]'
  pause 0.2
}
pause -1
