#!/usr/bin/gnuplot

  lsta = 1
  lend = 300
  lskp = 1
  dt = 0.1

  mx = 0
  my = 3
  #set yrange [-5:5]


do for [loop=lsta:lend:lskp]{
  input = sprintf('./data/phiinz_freq_mx%04dmy%04d_t%08d.dat', mx, my, loop)
  set title 't v_{ti}/R = '.sprintf('%7.2f', dt*loop)
  plot input u 1:2 ti '{/Symbol w}_r' w lp, \
          '' u 1:3 ti '{/Symbol g}_l' w lp
  pause 0.2
}
pause -1
