#!/usr/bin/gnuplot

  lsta = 1
  lend = 144
  lskp = 1
  dt = 0.1

  mx = 0
  my = 1
  set xrange [-5*pi:5*pi]
  set yrange [-2:2]


do for [loop=lsta:lend:lskp]{
  input = sprintf('./data/phiinz_parity_freq_mx%04dmy%04d_t%08d.dat', mx, my, loop)
  set title 't v_{ti}/R = '.sprintf('%7.2f', dt*loop)
  plot input u 1:2 ti '{/Symbol w} (Ballooning)' w lp, \
          '' u 1:3 ti '{/Symbol g} (Ballooning)' w lp, \
       input u 1:4 ti '{/Symbol w} (Tearing)' w lp, \
          '' u 1:5 ti '{/Symbol g} (Tearing)' w lp
  pause 0.2
}
pause -1

do for [loop=lsta:lend:lskp]{
  input = sprintf('./data/Alinz_parity2_freq_mx%04dmy%04d_t%08d.dat', mx, my, loop)
  set title 't v_{ti}/R = '.sprintf('%7.2f', dt*loop)
  plot input u 1:4 ti '{/Symbol w} (Ballooning)' w lp, \
          '' u 1:5 ti '{/Symbol g} (Ballooning)' w lp, \
       input u 1:2 ti '{/Symbol w} (Tearing)' w lp, \
          '' u 1:3 ti '{/Symbol g} (Tearing)' w lp
  pause 0.2
}
pause -1
